k8s/host-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host
spec:
  replicas: 2
  selector:
    matchLabels:
      app: host
  template:
    metadata:
      labels:
        app: host
    spec:
      containers:
      - name: host
        image: host:latest # ← usa «docker build -t host:latest host/»
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: host
spec:
  selector:
    app: host
  ports:
  - port: 80
    targetPort: 80
