k8s/tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
      - name: tasks
        image: tasks:latest # docker build -t tasks:latest mfe-tasks/
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tasks
spec:
  selector:
    app: tasks
  ports:
  - port: 80
    targetPort: 80
